--- a/src/main/res/layout/spinner_item.xml
+++ b/src/main/res/layout/spinner_item.xml
@@ -7,4 +7,5 @@
     android:gravity="left"
     android:textColor="@color/white"
     android:padding="7dp"
+    android:background="@drawable/border_white"
     />
