--- a/src/main/res/layout/fragment_beats.xml
+++ b/src/main/res/layout/fragment_beats.xml
@@ -44,11 +44,13 @@
         android:id="@+id/main_area"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/text_beats"
-        app:layout_constraintStart_toEndOf="@+id/place"
-        android:layout_marginTop="24dp"
         android:layout_marginLeft="20dp"
-        android:gravity="left" />
+        android:layout_marginTop="18dp"
+        android:gravity="left"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toEndOf="@+id/place"
+        app:layout_constraintTop_toBottomOf="@+id/text_beats"
+        android:contentDescription="Select a locality"/>
 
     <Button
         android:id="@+id/set"
@@ -100,7 +102,7 @@
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 android:textStyle="bold"
-                android:layout_marginLeft="25dp"/>
+                android:layout_marginLeft="10dp"/>
         </TableRow>
 
         <TableRow
@@ -115,7 +117,14 @@
             android:paddingHorizontal="20dp"
             android:padding="5dp"
             android:textSize="22sp"
-            android:layout_marginLeft="30dp"/>
+            android:layout_marginLeft="30dp"
+            />
+        <Spinner
+            android:id="@+id/user1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="Select a user"/>
+
 
         </TableRow>
         <TableRow
@@ -131,6 +140,12 @@
                 android:padding="5dp"
                 android:textSize="22sp"
                 android:layout_marginLeft="30dp"/>
+
+            <Spinner
+                android:id="@+id/user2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Select a user"/>
 
         </TableRow>
 
@@ -148,6 +163,12 @@
                 android:textSize="22sp"
                 android:layout_marginLeft="30dp"/>
 
+            <Spinner
+                android:id="@+id/user3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Select a user"/>
+
         </TableRow>
         <TableRow
             android:layout_width="match_parent"
@@ -162,6 +183,11 @@
                 android:padding="5dp"
                 android:textSize="22sp"
                 android:layout_marginLeft="30dp"/>
+            <Spinner
+                android:id="@+id/user4"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Select a user"/>
 
         </TableRow>
         <TableRow
@@ -177,6 +203,11 @@
                 android:padding="5dp"
                 android:textSize="22sp"
                 android:layout_marginLeft="30dp"/>
+            <Spinner
+                android:id="@+id/user5"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Select a user"/>
 
         </TableRow>
         <TableRow
@@ -192,6 +223,11 @@
                 android:padding="5dp"
                 android:textSize="22sp"
                 android:layout_marginLeft="30dp"/>
+            <Spinner
+                android:id="@+id/user6"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Select a user"/>
 
         </TableRow>
         <TableRow
@@ -207,7 +243,28 @@
                 android:padding="5dp"
                 android:textSize="22sp"
                 android:layout_marginLeft="30dp"/>
+            <Spinner
+                android:id="@+id/user7"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Select a user"/>
 
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/print"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="75dp"
+                android:background="@drawable/gradiant_red"
+                android:padding="5dp"
+                android:text="Print"
+                android:textColor="@color/white" />
         </TableRow>
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
