--- a/src/main/res/layout/activity_approve_appointment.xml
+++ b/src/main/res/layout/activity_approve_appointment.xml
@@ -1,9 +1,270 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/regular"
     tools:context=".ApproveAppointmentActivity">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/header2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginHorizontal="40dp"
+                android:gravity="center_horizontal"
+                android:text="Appointment Information"
+                android:textColor="@color/white"
+                android:background="@drawable/elements_red"
+                android:textSize="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/border_blue"
+                app:cardBackgroundColor="#BFFFFFFF"
+                app:cardCornerRadius="25dp"
+                android:id="@+id/high_command">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#00FFFFFF">
+
+                    <!--Name-->
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="50dp"
+                        android:text="Name: "
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/full_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="50dp"
+                        android:layout_toRightOf="@+id/textView13"
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp" />
+
+                    <!--User-->
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textView13"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Appoint to: "
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/appoint_with"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/full_name"
+                        android:layout_marginTop="10dp"
+                        android:layout_toRightOf="@+id/textView15"
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp" />
+
+                    <!--Phone Number-->
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textView15"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:text="Phone No.: "
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/phone_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/appoint_with"
+                        android:layout_marginTop="10dp"
+                        android:layout_toRightOf="@+id/textView17"
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp" />
+
+                    <!--Statement-->
+                    <TextView
+                        android:id="@+id/textView22"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textView17"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:minLines="3"
+                        android:text="Reaon: "
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/reason_disp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/phone_number"
+                        android:layout_marginTop="10dp"
+                        android:layout_toRightOf="@+id/textView22"
+                        android:minLines="3"
+                        android:textColor="@color/t_b"
+                        android:textSize="18sp"
+                        android:layout_marginBottom="50dp"/>
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginTop="40dp"
+                android:background="@drawable/border_blue"
+                app:cardBackgroundColor="#BFFFFFFF"
+                app:cardCornerRadius="25dp"
+                android:id="@+id/hide_if_required">
+
+                <!-- Parent Alignment -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <!-- Time -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/me_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/left_element"
+                            android:ems="12"
+                            android:gravity="center"
+                            android:inputType="textPersonName"
+                            android:layout_marginTop="40dp"
+                            android:minHeight="48dp"
+                            android:padding="5dp"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/white" />
+
+                        <Button
+                            android:id="@+id/get_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Set Time"
+                            android:layout_marginTop="40dp"
+                            android:background="@drawable/right_element"
+                            android:textColor="@color/white"
+                            android:padding="5dp"/>
+                    </LinearLayout>
+
+                    <!-- Date -->
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/me_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="@drawable/left_element"
+                            android:ems="12"
+                            android:gravity="center"
+                            android:inputType="textPersonName"
+                            android:layout_marginTop="40dp"
+                            android:minHeight="48dp"
+                            android:padding="5dp"
+                            android:textColor="@color/white"
+                            android:textColorHint="@color/white" />
+
+                        <Button
+                            android:id="@+id/get_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Set Date"
+                            android:layout_marginTop="40dp"
+                            android:background="@drawable/right_element"
+                            android:textColor="@color/white"
+                            android:padding="5dp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+
+                        <Button
+                            android:id="@+id/approve"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Approve Appointment"
+                            android:textColor="@color/white"
+                            android:background="@drawable/gradiant_red"
+                            android:padding="2dp"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginVertical="25dp"/>
+
+                        <Button
+                            android:id="@+id/disapprove"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="Reject Appointment"
+                            android:textColor="@color/white"
+                            android:background="@drawable/gradiant_red"
+                            android:padding="2dp"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginVertical="25dp"/>
+                    </LinearLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
